# project-management-api

./: .env.example  .gitignore  DESIGN_RATIONALE.md  README.md  TASK.md  config.py  postman_collection.json  pyproject.toml  requirements.txt  run.py
app/: __init__.py  logging_config.py
app/auth/: routes.py  services.py  validators.py
app/middleware/: __init__.py  auth.py
app/projects/: __init__.py  models.py  routes.py  validators.py
app/tasks/: __init__.py  models.py  routes.py  validators.py
app/users/: __init__.py  models.py  routes.py  validators.py
docs/: Makefile  README.md  api_overview.rst  authentication.rst  changelog.rst  conf.py  contributing.rst  design_rationale.rst  index.rst  installation.rst  make.bat  modules.rst
tests/: __init__.py  conftest.py  test_auth.py  test_middleware.py  test_models.py  test_projects.py  test_tasks.py  test_users.py
