[project]
name = "project-management-api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "pytest-flask>=1.3.0",
    "python-dotenv>=1.2.1",
    "sphinx>=8.2.3",
]

[dependency-groups]
dev = ["mypy>=1.18.2", "ruff>=0.14.2"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "D",    # pydocstyle: removed during early development
    "Q000", # quotes: single quotes are preferred
]
