[project]
name = "project-management-api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "loguru>=0.7.3",
    "pyjwt>=2.10.1",
    "pytest-flask>=1.3.0",
    "python-dotenv>=1.2.1",
    "sphinx>=8.2.3",
]

[dependency-groups]
dev = ["mypy>=1.18.2", "ruff>=0.14.2"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "D", # pydocstyle: removed during early development
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.per-file-ignores]
"app/__init__.py" = ["PLC0415"]        # import-outside-top-level
"app/*/routes.py" = ["BLE001"]         # blind-except
"app/*/__init__.py" = ["E402", "F401"] # module-import-not-at-top-of-file, unused-import
