[project]
name = "project-management-api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "loguru>=0.7.3",
    "pyjwt>=2.10.1",
    "pytest-flask>=1.3.0",
    "python-dotenv>=1.2.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[dependency-groups]
dev = ["mypy>=1.18.2", "ruff>=0.14.2"]
docs = ["sphinx>=8.2.3", "sphinx-rtd-theme>=3.0.2"]
test = ["pytest>=8.0.0", "pytest-flask>=1.3.0"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "COM812", # missing-trailing-comma: redundant with formatter
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
"app/__init__.py" = ["PLC0415"] # import-outside-top-level
"app/*/routes.py" = ["BLE001"] # blind-except
"app/*/__init__.py" = [
    "E402", # module-import-not-at-top-of-file
    "F401", # unused-import
]
"tests/*" = [
    "ARG",     # flake8-unused-arguments
    "S101",    # assert
    "PLR2004", # magic-value-comparison
]
"docs/*" = ["INP001"] # implicit-namespace-package

[tool.ruff.lint.pydocstyle]
convention = "google"
